--- a/gui/slick/css/style.css
+++ b/gui/slick/css/style.css
@@ -197,10 +197,7 @@ inc_top.mako
 .upgrade-notification {
     width: 600px;
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 50px;
-    margin-bottom: 0;
+    margin: 50px auto 0 auto;
 }
 
 [class^="menu-icon-"], [class*=" menu-icon-"] {
