--- a/gui/slick/css/style.css
+++ b/gui/slick/css/style.css
@@ -2376,10 +2376,7 @@ option.flag {
 }
 
 #Anime div.component-group-desc p {
-    margin-bottom: 0.4em;
-    margin-left: 0;
-    margin-right: 0;
-    margin-top: 0.4em;
+    margin: 0.4em 0 0.4em 0;
     width: 95%;
 }
 
