--- a/gui/slick/css/dark.css
+++ b/gui/slick/css/dark.css
@@ -299,7 +299,7 @@ ul.tags li {
     cursor: default;
 }
 
-.sickbeardTable {
+.defaultTable {
     table-layout: auto;
     width: 100%;
     border-collapse: collapse;
@@ -310,15 +310,15 @@ ul.tags li {
     color: rgb(0, 0, 0);
 }
 
-.sickbeardTable th {
+.defaultTable th {
     color: rgb(255, 255, 255);
     text-align: center;
     background-color: rgb(21, 82, 143);
     white-space: nowrap;
 }
 
-.sickbeardTable th,
-.sickbeardTable td {
+.defaultTable th,
+.defaultTable td {
     border-top: 1px solid rgb(34, 34, 34);
     border-left: 1px solid rgb(34, 34, 34);
     padding: 4px;
@@ -844,12 +844,12 @@ thead.tablesorter-stickyHeader {
 
 /* Zebra Widget - row alternating colors */
 .tablesorter tr.odd,
-.sickbeardTable tr.odd {
+.defaultTable tr.odd {
     background-color: rgb(51, 51, 51);
 }
 
 .tablesorter tr.even,
-.sickbeardTable tr.even {
+.defaultTable tr.even {
     background-color: rgb(46, 46, 46);
 }
 
