--- a/gui/slick/css/style.css
+++ b/gui/slick/css/style.css
@@ -1796,7 +1796,7 @@ select .selected {
     width: 16px;
 }
 
-.icon16-config-sickrage {
+.icon16-config-application {
     background-position: 0 0;
 }
 
