Fix selects width. It should auto resize

--- a/gui/slick/css/style.css
+++ b/gui/slick/css/style.css
@@ -2977,6 +2977,7 @@ input sizing (for config pages)
 ========================================================================== */
 
 #config select {
+    width: auto;
     display: inline;
 }
 
