--- a/static/css/style.css
+++ b/static/css/style.css
@@ -975,6 +975,13 @@ displayShow.mako
   width: 90%;
 }
 
+.modal-dialog{
+    overflow-y: initial !important
+}
+.modal-body{
+    overflow-y: auto;
+}
+
 #posterCol {
     float: left;
     margin-right: 10px;
