Adds manual subtitle search in displayShow and re-download subtitle (clicking in the existing flag) (#1168)
* Add new feature Manual Subtitle Search

* Add empty modal

* Ask manual ou auto subtitles

* Calls manual_search_subtitles in handler

* Search for subs!

* Populate modal

* Improve subliminal search

* Add log message next to the scores log message

* Add a checkmark if result is a subtitle match

* Show "pick" button and get click event

* Add missing guess

* Add subtitle_id to return list

* UI adjustments

* Add missed subs in pp page

* UI improvements

* Remove missing guess when hash match (score 10)

* Call pick subtitles

* Store releases in pp folder and pass id only

* Use subtitle id as the row number so we can use as index in found_subtitles list

* Fix missing path

* Return 'hash' as subtitle description

* Add column flag again and cut filename

* Single modal maintaince

* Update ajax-episode-subtitles.js

* Show spinning wheel only when actual searching

* Better modal title set

* JSlint + code comments

* more improvements in js

* Make 'auto' button blue

* Improve missed subtitles in PP page

* Show only releases without subtitles

* Create a function to change image. Avoid duplicate code

* single quotes + improve

* Add redownload feature

* Save subtitle!

* Disable all searches when one is running and re-show modal if user closed

* Improve score calculation

* fix IndexError

* Remove row when we downloaded subtitle

* Add button to call manual PP

* Check if file still is in library

* Improve handler code

* omg review

* Splitting subtitles.py methods into 3 functions. Improving user scoring formula.

* Fix align of "Run Manual Post-Process" button in FF

* Remove old code and log message

* Re-add redownload subtitles

* Improve handler

* Improve subtitle checkmark check

* Modal: fix not able to select text

* Make modal head

--- a/static/css/dark.css
+++ b/static/css/dark.css
@@ -972,11 +972,9 @@ new #confirmBox
 @TODO THIS NEEDS TO BE FIXED!
 ========================================================================== */
 .modal-dialog {
-    width: 460px;
-    position: fixed;
-    left: 50%;
-    top: 50%;
-    margin: -130px 0 0 -230px;
+    min-width: 50%;
+    position: relative;
+    margin: 30px auto;
     border: 1px solid rgb(17, 17, 17);
     box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.175);
     border-radius: 0;
@@ -1007,10 +1005,6 @@ new #confirmBox
 
 .modal-footer {
     text-align: center;
-}
-
-.modal-header .close {
-    display: none;
 }
 
 .modal-footer button {
